syntax = "proto3";
package protocol;
import "google/protobuf/any.proto";
service S2SService {
  rpc Poll(S2SRequest) returns (S2SResponse);
  rpc PING(Timestamp) returns (Timestamp);
}
service S2CService {
  rpc Poll(C2SRequest) returns (S2CResponse);
  rpc PING(Timestamp) returns (Timestamp);
}

message RequestSendOption {
  google.protobuf.Any Option = 1;
  string Addr = 2;
}
message ResponseSendOption {
  google.protobuf.Any Option = 1;
}
message Timestamp {
  uint64 Timestamp = 1;
}
message ServerInfo {
  string ServerID = 1;
  string ServiceType = 2;
  bytes AdditionalInfo = 3;
}
message S2CInfo {
  ServerInfo ServerInfo = 1;
  RequestSendOption RequestSendOption = 2;
  repeated S2CInfo Candidates = 3;
}
message S2SInfo {
  ServerInfo ServerInfo = 1;
  ResponseSendOption ResponseSendOption = 2;
  RequestSendOption RequestSendOption = 3;
  repeated S2SInfo Candidates = 4;
  S2CInfo S2CInfo = 5;
}
message S2SRequest {
  S2SInfo S2SInfo = 1;
  bool Disconnect = 2;
}
message S2SResponse {
  S2SInfo S2SInfo = 1;
  int64 Timeout = 2;
  bool Reject = 3;
}
message ClientInfo {
  string ClientID = 1;
  string ServiceType = 2;
  bytes AdditionalInfo = 3;
}
message C2SInfo {
  ClientInfo ClientInfo = 1;
  ResponseSendOption ResponseSendOption = 2;
}
message C2SRequest {
  C2SInfo C2SInfo = 1;
  bool Disconnect = 2;
}
message S2CResponse {
  S2CInfo S2CInfo = 1;
  int64 Timeout = 2;
  bool Reject = 3;
}