syntax = "proto3";
package protocol;
import "service.proto";

service GraphQuery {
  rpc Query(Empty) returns (GraphQueryInfo);
}

message Empty {
}

message GraphQueryInfo {
  S2SInfo S2SInfo = 1;
  repeated S2SInfo Indegree = 2;
  repeated S2SInfo Outdegree = 3;
  repeated C2SInfo Clients = 4;
}